manifests/kiali/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  tls:
    - secretName: kiali-tls
      hosts:
        - kiali.${OSH_FQDN}
  rules:
    - host: kiali.${OSH_FQDN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  name: http
